--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -61,11 +61,13 @@ jobs:
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
           commit_message: "Deploy preview for PR #${{ github.event.number }}"
-          full_commit_message: "Deploy preview for PR #${{ github.event.number }} - ${{ github.event.pull_request.title }}"
+          full_commit_message: "Deploy preview for PR #${{ github.event.number }}"
 
       - name: Comment PR with preview URL
         if: github.event.pull_request.head.repo.full_name == github.repository
         uses: actions/github-script@v7
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
         with:
           script: |
             const previewUrl = `https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/preview/pr-${{ github.event.number }}/`;
@@ -86,7 +88,7 @@ jobs:
             🔗 **Preview URL:** ${previewUrl}
 
             📝 **Changes in this PR:**
-            ${{ github.event.pull_request.title }}
+            ${process.env.PR_TITLE}
 
             ⏰ **Preview will be available until PR is closed**
 
@@ -112,6 +114,8 @@ jobs:
       - name: Comment PR for forks
         if: github.event.pull_request.head.repo.full_name != github.repository
         uses: actions/github-script@v7
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
         with:
           script: |
             await github.rest.issues.createComment({
@@ -121,7 +125,7 @@ jobs:
               body: `🚀 **Build completed successfully!**
               
               📝 **Changes in this PR:**
-              ${{ github.event.pull_request.title }}
+              ${process.env.PR_TITLE}
               
               ⚠️ **Note:** Preview deployment is only available for PRs from the same repository.
               For forks, please check the build artifacts for the generated site.
